test/Fail/BadCode.lagda.tree
% The typo is intended.
\agda{
posulate X :
}
