test/Fail/BadCode.err
BadCode.lagda.tree:3.12: error: [ParseError]
<EOF><ERROR> ...
